# MemoMate

./: .gitignore
firmware/echofridge/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware/echofridge/cmake/: generate_build_time.cmake
firmware/echofridge/components/port_bsp/: CMakeLists.txt
firmware/echofridge/main/: CMakeLists.txt  main.cpp  poem_data.cpp  poem_data.h  sd_card.cpp  sd_card.h  user_config.h
firmware/echofridge/main/fonts/: anton_28_climate.c  anton_42_climate.c  anton_82_time.c  anton_86_time.c  anton_90_time.c  anton_92_time.c  anton_fonts.h  lxgw_wenkai_12_poem.c  lxgw_wenkai_14_poem.c  lxgw_wenkai_16_poem.c  lxgw_wenkai_17_poem.c  lxgw_wenkai_18_poem.c  montserrat_21_month.c  montserrat_24_climate.c
firmware/echofridge/main/icons/: climate_icons.h
firmware/echofridge/main/images/: cat_photo.h
firmware/echofridge/scripts/: convert_anton_fonts.sh
papers/: image_upload_plan.md  poems.json  prepare.md  yuanshiyuliao.md
scripts/: convert_lxgw_wenkai_poem_font.sh  convert_poems.py
